--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,25 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
+/* COLOR SCHEME: Bright Accent - Blue/Violet base, Red/Orange accents */
+/* Main Background: #2026B2,
+Background2: #2F2FA2,
+Grey Background: #F1F1F1,
+Violet Base: #553D67,
+Orange accent: #FB654A,
+Orange Accent2: #F64C72,
+White: #FDFDFD */
 
 /* Body */
 
 body {
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Quicksand', sans-serif;
 }
 
 /* Bootstrap Navbar */
 
 .bg-light.navbar-light {
-    background-color: transparent!important;
+    background-color: #2026B2!important;
+    padding-bottom: 6px;
 }
 
 #links-div {
@@ -18,6 +28,7 @@ body {
 
 .nav-link {
     display: inline-block;
+    font-size: 1.25vw;
 }
 
 .navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
@@ -41,5 +52,5 @@ body {
 #welcome {
     padding-top: 45px;
     height: 500px;
-    background-color: #25274D;
+    background-color: #2026B2;
 }
