--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Prompt:wght@200;300;400;500;600;700;800&display=swap');
-
 /* COLOR SCHEME: Bright Accent - Blue/Violet base, Red/Orange accents */
+
 /* Main Background: #2026B2,
 Background2: #2F2FA2,
 Grey Background: #F1F1F1,
@@ -32,6 +32,12 @@ body {
     font-size: 1vw;
 }
 
+@media (max-width: 660px) {
+    .nav-link {
+        font-size: 7px;
+    }
+}
+
 .navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
     color: #FDFDFD;
 }
@@ -42,29 +48,64 @@ body {
 
 .navbar-light .navbar-nav .nav-link.is-current {
     color: #FB654A;
-    border-bottom: 3px solid #FB654A ;
+    border-bottom: 3px solid #FB654A;
 }
 
 .navbar-light .navbar-nav .nav-link:hover {
-    color: #F64C72;
+    color: #E63C62;
 }
 
 /* Welcome Section */
 
 #welcome {
-    padding-top: 45px;
+    padding-top: 50px;
     height: 500px;
     background-color: #2026B2;
 }
 
+#welcome .welcome-info {
+    height: 450px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+#welcome .welcome-text {
+    vertical-align: middle;
+    display: inline-block;
+}
+
 #welcome h1 {
+    margin-top: 100px;
     color: #FDFDFD;
+    font-size: 5vw;
 }
 
 #welcome h4 {
     color: #FDFDFD;
+    font-size: 1.5vw;
+}
+
+@media (max-width: 660px) {
+    #welcome h1 {
+        font-size: 33px;
+    }
+    #welcome h4 {
+        font-size: 10px;
+    }
 }
 
 #welcome h4 span {
     color: #FB654A;
+    position: relative;
+}
+
+#welcome .Typist {
+    display: inline-block;
+}
+
+img {
+    width: 15vw;
+    border-radius: 50%;
+    border: 2px solid #FB654A;
+    display: inline-block;
 }
