--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,7 @@ body {
 }
 
 #welcome .welcome-info {
-    height: 450px;
+    height: 400px;
     margin: 0 auto;
     text-align: center;
 }
@@ -75,7 +75,7 @@ body {
 }
 
 #welcome h1 {
-    margin-top: 100px;
+    margin-top: 50px;
     color: #FDFDFD;
     font-size: 5vw;
 }
@@ -101,6 +101,14 @@ body {
 
 #welcome .Typist {
     display: inline-block;
+}
+
+#welcome hr {
+    border: 0;
+    height: 1px;
+    background: #FB654A;
+    background-image: linear-gradient(to right, #2026B2, #FB654A, #2026B2);
+    width: 55vw;
 }
 
 img {
