--- a/src/App.css
+++ b/src/App.css
@@ -212,3 +212,15 @@ hr.section-divider {
     background: #F1F1F1;
     text-align: center;
 }
+
+/* Skills Section */
+
+#skills {
+    text-align: center;
+    background: #F1F1F1;
+}
+
+#contact {
+    text-align: center;
+    background: #F1F1F1;
+}
