--- a/src/App.css
+++ b/src/App.css
@@ -296,3 +296,8 @@ hr.section-divider {
     text-align: center;
     background: #F1F1F1;
 }
+
+#contact a button:hover {
+    color: #FB654A;
+    border-color: #FB654A;
+}
