--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@ body {
 
 .nav-link {
     display: inline-block;
-    font-size: 1vw;
+    font-size: 1.25vw;
 }
 
 @media (max-width: 660px) {
@@ -45,6 +45,8 @@ body {
 
 .navbar-light .navbar-nav .nav-link {
     color: #FDFDFD;
+    margin-left: 2vw;
+    margin-right: 2vw;
 }
 
 .navbar-light .navbar-nav .nav-link.is-current {
@@ -60,14 +62,16 @@ body {
 
 #welcome {
     padding-top: 50px;
-    height: 500px;
+    height: 100vh;
+    min-height: 500px;
     background-color: #2026B2;
     background: rgb(32, 38, 178);
     background: radial-gradient(circle, rgba(32, 38, 178, 1) 0%, rgba(47, 47, 162, 1) 100%);
 }
 
 #welcome .welcome-info {
-    height: 375px;
+    height: 80vh;
+    min-height: 375px;
     margin: 0 auto;
     text-align: center;
 }
@@ -78,23 +82,14 @@ body {
 }
 
 #welcome h1 {
-    margin-top: 50px;
+    margin-top: 15vh;
     color: #FDFDFD;
-    font-size: 5vw;
+    font-size: 8vw;
 }
 
 #welcome h4 {
     color: #FDFDFD;
-    font-size: 1.5vw;
-}
-
-@media (max-width: 660px) {
-    #welcome h1 {
-        font-size: 33px;
-    }
-    #welcome h4 {
-        font-size: 10px;
-    }
+    font-size: 2.5vw;
 }
 
 #welcome h4 span {
@@ -115,7 +110,7 @@ body {
 }
 
 #welcome .welcome-contact {
-    margin-top: 30px;
+    margin-top: 5vh;
 }
 
 #welcome .welcome-contact a {
@@ -133,13 +128,13 @@ body {
 
 #welcome .welcome-contact i {
     display: block;
-    font-size: 2.5vw;
+    font-size: 3vw;
     margin-bottom: 4px;
 }
 
 #welcome .welcome-contact p {
     display: inline-block;
-    font-size: 1.25vw;
+    font-size: 1.5vw;
 }
 
 #welcome .welcome-contact a.instagram:hover {
@@ -177,10 +172,11 @@ body {
 #about-me {
     text-align: center;
     background: #F1F1F1;
+    padding-bottom: 15vh;
 }
 
 #about-me img {
-    margin-top: 50px;
+    margin-top: 8vh;
     width: 18vw;
     border-radius: 50%;
     border: 2px solid #FB654A;
@@ -188,7 +184,7 @@ body {
 
 .section-title {
     margin-top: 15px;
-    font-size: 2.5vw;
+    font-size: 2.75vw;
     margin-bottom: 16px;
     color: #222;
 }
@@ -201,8 +197,8 @@ hr.section-divider {
 }
 
 #about-me .about-me-text {
-    font-size: 1.5vw;
-    width: 60vw;
+    font-size: 1.75vw;
+    width: 80vw;
     margin: 0 auto;
     color: #333;
 }
@@ -217,6 +213,7 @@ hr.section-divider {
 #portfolio {
     background: #F1F1F1;
     text-align: center;
+    padding-bottom: 15vh;
 }
 
 #portfolio img {
@@ -242,53 +239,26 @@ hr.section-divider {
 #skills {
     text-align: center;
     background: #F1F1F1;
+    padding-bottom: 15vh;
 }
 
 #skills .subtitle {
-    font-size: 1.5vw;
+    font-size: 1.75vw;
     color: #2026B2;
     margin-bottom: .3rem;
 }
 
 #skills .subtext {
-    font-size: 1.25vw;
+    font-size: 1.5vw;
     margin-bottom: .2rem;
 }
 
-@media (min-width: 1280px) {
-    #skills .subtitle {
-        font-size: 20px;
-    }
-
-    #skills .subtext {
-        font-size: 18px;
-    }
-}
-
 #skills .skills-top {
-    height: 175px;
+    height: 15vw;
 }
 
 #skills .skills-bottom {
-    height: 225px;
-}
-
-@media (max-width: 991px) {
-    #skills .skills-top {
-        height: 125px;
-    }
-    
-    #skills .skills-bottom {
-        height: 180px;
-    }
-
-    #skills .subtitle {
-        font-size: 14px;
-    }
-
-    #skills .subtext {
-        font-size: 12px;
-    }
+    height: 18vw;
 }
 
 /* Contact Section */
