--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Prompt:wght@200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap');
 /* COLOR SCHEME: Bright Accent - Blue/Violet base, Red/Orange accents */
 
 /* Main Background: #2026B2,
@@ -233,7 +234,7 @@ hr.section-divider {
     color: #fff;
     text-align: center;
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 100%;
@@ -243,14 +244,16 @@ hr.section-divider {
     font-size: 1vw;
 }
 
-@media (max-width: 660px) {
-    #portfolio .hover-text {
-        font-size: 5vw;
-    }
+#portfolio .hover-text .rowlogger-header {
+    font-family: 'Raleway', sans-serif;
+    font-size: 2.2vw;
+    font-weight: 600;
+    margin-bottom: 0;
+    padding-bottom: 5%;
 }
 
 #portfolio img:hover {
-    filter: brightness(50%);
+    filter: brightness(30%);
     cursor: pointer;
 }
 
@@ -261,6 +264,16 @@ hr.section-divider {
 #portfolio button:hover {
     color: #FB654A;
     border-color: #FB654A;
+}
+
+@media (max-width: 992px) {
+    #portfolio .hover-text {
+        font-size: 2.5vw;
+    }
+
+    #portfolio .hover-text .rowlogger-header {
+        font-size: 5vw;
+    }
 }
 
 /* Skills Section */
